@@ -10,6 +10,10 @@
 	<li>Added two exceptions to the LGPL to support static
 	linking of applications against Mini-XML.</li>
 
+	<li>Added conditional check for EINTR error code for
+	certain Windows compilers that do not define it (STR
+	#33)</li>
+
 	<li>The mxmldoc program now generates correct HTML 4.0
 	output (previously it generated invalid XHTML...)</li>
 
